samples/_failures_safe/1761144470_9551b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6011659c.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_6011659c.c:145:5: error: expected expression at end of input
  145 |     static const char* state_names[] =
      |     ^~~~~~
./samples/SAFE/__tmp_6011659c.c:145:5: error: expected declaration or statement at end of input
